# personas

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  PERSONA.md  README.md  REFACTORING_PLAN.md  SECURITY.md  TEMPLATES.md  _en_temp.js  app-passport.json  ar_missing_keys.txt  ar_missing_keys_full.txt  bash.exe.stackdump  context-map.json  czech.txt  de_parity.json  docker-compose.test.yml  du.exe.stackdump  eslint.config.js  extract_en.mts  extract_en_values.ts  i18n-en-cs.csv  index.html  knip.json  lefthook.yml  lintsec.tmp.txt  list.md  missing_de_keys.json  missing_de_with_values.json  (+24 more)
src-tauri/: .gitignore  .tauri-scraper-dev.conf.json  Cargo.toml  build.rs  deny.toml  tauri.android.conf.json  tauri.conf.json  tauri.lite.conf.json  tauri.stable.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/: AccessLevel.ts  AdoptionResult.ts  AgentEnvelope.ts  AlertOperator.ts  AlertRule.ts  AlertSeverity.ts  AmbientContextSnapshot.ts  AmbientSignalEntry.ts  AnomalyDrilldownData.ts  AnomalyScore.ts  ApiEndpoint.ts  ApiParameter.ts  ApiProxyCredentialMetrics.ts  ApiProxyResponse.ts  ApiRequestBody.ts  AppendMessageResult.ts  ApplyMemoryReviewProposalResult.ts  ArtistAsset.ts  ArtistTag.ts  AssertionFailureAction.ts  AssertionType.ts  AssetType.ts  AudioStage.ts  AudioTrack.ts  AuditIncident.ts  AuditIncidentSummary.ts  AuthStateResponse.ts  AuthSubscription.ts  AuthUser.ts  AutoCredBrowserRequest.ts  AutoCredBrowserResult.ts  AutoCredField.ts  AutomationDeployStatus.ts  AutomationFallbackMode.ts  AutomationRun.ts  AutomationRunStatus.ts  AutosaveInfo.ts  BlenderMcpStatus.ts  BlueprintConnection.ts  BlueprintMember.ts  (+506 more)
src-tauri/capabilities/: default.json  mobile.json  radio.json
src-tauri/data/: radio_stations.json
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/nsis/languages/: Czech.nsh  Hindi.nsh  Indonesian.nsh  Vietnamese.nsh
src-tauri/src/: athena_bench_bin.rs  background_job.rs  daemon_bin.rs  error.rs  freeze_monitor.rs  ipc_auth.rs  keyed_pool.rs  lib.rs  logging.rs  main.rs  mcp_bin.rs  notifications.rs  startup_timing.rs  stream_harness.rs  test_automation.rs  tray.rs  validation.rs
src-tauri/src/bench/: athena_validate.rs  db.rs  mod.rs
src-tauri/src/browser_bridge/: mcp.rs  mod.rs  relay.rs
src-tauri/src/cloud/: client.rs  config.rs  mod.rs  remote_commands.rs  runner.rs
src-tauri/src/cloud/sync/: client.rs  cursor.rs  mod.rs  rows.rs
src-tauri/src/commands/: auth.rs  cloud.rs  credential_design.rs  credentials.rs  design.rs  design_reviews.rs  drive.rs  eval_runs.rs  groups.rs  live_roadmap.rs  memories.rs  mod.rs  radio.rs  scheduler.rs  setup.rs  system.rs  teams.rs
src-tauri/src/commands/artist/: ffmpeg.rs  mod.rs  persistence.rs  schema_policy.rs  transcribe.rs  voiceover.rs
src-tauri/src/commands/communication/: events.rs  messages.rs  mock_seed.rs  mod.rs  notifications.rs  observability.rs  shared_events.rs  sla.rs
src-tauri/src/commands/companion/: approvals.rs  brain.rs  browser_test.rs  chat.rs  connectors.rs  consolidate.rs  conversation.rs  decisions.rs  feedback.rs  fleet_bridge.rs  jobs.rs  mcp_bridge.rs  mod.rs  observability.rs  plugins.rs  proactive.rs  project_tracking.rs  sensory.rs  stt.rs  templates.rs  voice.rs
src-tauri/src/commands/core/: chat.rs  composition_workflows.rs  data_portability.rs  export_types.rs  gallery.rs  goal_planner.rs  groups.rs  import_export.rs  memories.rs  memory_compile.rs  mod.rs  persona_icon_gen.rs  persona_icons.rs  persona_jobs.rs  personas.rs  saved_views.rs  use_cases.rs  validation.rs
src-tauri/src/commands/credentials/: ai_artifact_flow.rs  api_proxy.rs  auth_detect.rs  (+26 more)
src-tauri/src/companion/: athena_reaction.rs  connectors.rs  conversation.rs  dev_mode.rs  dev_session.rs  disk.rs  dispatcher.rs  generated_anchors.rs  mod.rs  model_routing.rs  observability.rs  plugins.rs  projects.rs  prompt.rs  session.rs  turn_ledger.rs  util.rs  wake_window.rs
src-tauri/src/daemon/: lock.rs  mod.rs  runtime.rs
src-tauri/src/db/: backup.rs  builtin_connectors.rs  builtin_shared_events.rs  cdc.rs  credential_fields.rs  macros.rs  migrations.rs  mod.rs  models.rs  perf.rs  query_builder.rs  settings_keys.rs
src-tauri/src/engine/: README.md  adoption_answers.rs  ai_healing.rs  ai_helpers.rs  ambient_context.rs  ambient_signal_repo.rs  api_definition.rs  api_proxy.rs  app_focus.rs  archetype_catalog.rs  audit_incidents_promoter.rs  auto_rollback.rs  auto_triage.rs  automation_runner.rs  autonomy.rs  autopilot.rs  backend.rs  background.rs  build_session.rs  bundle.rs  bus.rs  byom.rs  capability.rs  capability_contract.rs  chain.rs  channel_reply.rs  chunker.rs  circuit_breakers_integration_tests.rs  claude_md_projection.rs  cli_capabilities.rs  cli_mcp_config.rs  cli_process.rs  cli_session_audit_repo.rs  clipboard_error_detector.rs  clipboard_monitor.rs  cloud_webhook_relay.rs  compilation_pipeline.rs  compiler.rs  composite.rs  config_merge.rs  (+147 more)
src-tauri/src/gitlab/: client.rs  config.rs  converter.rs  mod.rs  types.rs
src-tauri/src/langfuse/: client.rs  compose.yml.tmpl  config.rs  docker.rs  exporter.rs  lab_score.rs  lifecycle.rs  mod.rs  templates.rs  types.rs
src-tauri/src/local_http/: langfuse_routes.rs  mod.rs
src-tauri/src/mcp_server/: auth.rs  auth_tests.rs  db.rs  install.rs  mod.rs  obsidian_vault_tests.rs  tools.rs  vault.rs
src-tauri/src/radio/: mod.rs  service.rs
src-tauri/src/retrieval/: mod.rs
src-tauri/src/utils/: mod.rs  sanitization.rs  text.rs
src-tauri/src/validation/: chat.rs  contract.rs  memory.rs  mod.rs  persona.rs  trigger.rs
src-tauri/src/webbuild/: bun.rs  devserver.rs  mcp.rs  mod.rs  plan.rs  preview_agent.rs  project.rs  routes.rs  versions.rs
src-tauri/tests/: byom_bindings_gen.rs  eval_runs_bindings_gen.rs  eval_runs_data.rs  render_plan_bindings_gen.rs  render_plan_export_parity.rs  render_plan_fixtures.rs  render_plan_integration.rs  render_plan_proptest.rs
(+12582 files in other folders)
