[package]
name = "personas-desktop"
version = "0.1.6"
description = "Personas AI Agent Platform"
authors = ["Personas"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"
default-run = "personas-desktop"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[features]
default = []
desktop = [
    "tauri/tray-icon",
    "dep:arboard",
    "dep:notify",
    "dep:keyring",
    "dep:which",
    "dep:tauri-plugin-window-state",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-single-instance",
]
# mobile feature is activated automatically by Tauri v2 when targeting Android/iOS
mobile = []
# Enables test automation HTTP server on localhost:17320 for MCP-driven UI testing
test-automation = []

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

# Desktop-only plugins (gated behind "desktop" feature)
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "sync", "time",
    "process", "io-util", "fs", "net",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }
dirs = "6"
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
whoami = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
axum = "0.8"
hmac = "0.12"
hex = "0.4"
open = "5"
url = "2"
urlencoding = "2"
sentry = { version = "0.34", default-features = false, features = [
    "backtrace", "contexts", "panic", "rustls", "reqwest"
] }
sentry-tracing = "0.34"
zeroize = { version = "1", features = ["derive"] }
dotenvy = "0.15"
rsa = "0.9"
rand = "0.8"
regex = "1"
glob = "0.3"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
jsonschema = { version = "0.28", default-features = false }

# Vector Knowledge Base (Phase 1: sqlite-vec + local embeddings)
sqlite-vec = "0.1"
fastembed = "4"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }

# P2P / Identity (Phase 1: Invisible Apps)
ed25519-dalek = { version = "2", features = ["serde", "zeroize", "rand_core"] }
bs58 = "0.5"

# P2P / LAN Discovery & Transport (Phase 2: Invisible Apps)
mdns-sd = "0.11"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
rmp-serde = "1.3"

# Desktop-only crates (gated behind "desktop" feature)
notify = { version = "7", default-features = false, features = ["macos_kqueue"], optional = true }
arboard = { version = "3", optional = true }
keyring = { version = "3", optional = true }
which = { version = "8.0.1", optional = true }

[[bin]]
name = "personas-mcp"
path = "src/mcp_bin.rs"

# Daily release profile: thin LTO is ~2-4x faster link with <2% perf difference.
# Use `cargo tauri build` (default) for daily releases.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 2
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

# Fast local testing: `cargo build --profile dev-release`
# ~3x faster compile than release, still optimized enough for perf testing
[profile.dev-release]
inherits = "dev"
opt-level = 2
lto = "thin"

# CI profile: faster than release but catches optimization bugs.
# Used by CI for test + clippy runs — avoids full LTO cost.
[profile.ci]
inherits = "release"
codegen-units = 4
strip = false

# Milestone/stable release profile: full LTO for maximum optimization.
# Use via: cargo tauri build --profile stable
[profile.stable]
inherits = "release"
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security_Cryptography",
] }
