[package]
name = "personas-desktop"
version = "0.1.0-ff.1"
description = "Personas AI Agent Platform"
authors = ["Personas"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"
default-run = "personas-desktop"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[features]
default = []
# Core desktop feature — all UI/desktop plugins, no heavy ML/P2P.
# Use this for fast local builds (~5 min faster than desktop-full).
# All #[cfg(feature = "desktop")] gates pass with this feature.
desktop = [
    "tauri/tray-icon",
    "dep:arboard",
    "dep:notify",
    "dep:keyring",
    "dep:which",
    "dep:xcap",
    "dep:image",
    "dep:tauri-plugin-window-state",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-single-instance",
]
# Full desktop = core + ML + P2P. Used by CI and production builds.
desktop-full = ["desktop", "ml", "p2p"]
# Vector Knowledge Base: sqlite-vec + local embeddings (ONNX)
ml = ["dep:sqlite-vec", "dep:fastembed", "dep:ort"]
# P2P / LAN Discovery & Transport (Invisible Apps)
p2p = ["dep:ed25519-dalek", "dep:bs58", "dep:mdns-sd", "dep:quinn", "dep:rcgen", "dep:rmp-serde"]
# mobile feature is activated automatically by Tauri v2 when targeting Android/iOS
mobile = []
# Enables test automation HTTP server on localhost:17320 for MCP-driven UI testing
test-automation = ["dep:xcap", "dep:image"]
# Phase 0 scaffolding for the always-on daemon mode. Gates the
# `personas-daemon` bin target.
#
# Currently implies `desktop-full` because the lib has pre-existing
# `#[cfg(feature = "desktop")]` gaps in engine/enclave.rs,
# engine/healthcheck.rs, commands/ocr/mod.rs, and commands/credentials/
# auth_detect.rs — non-desktop builds fail to link. Fixing those is
# tracked as Phase 1 cleanup; the daemon binary doesn't actually use
# the desktop-specific plugins at runtime.
# See .planning/research/2026-04-08-cloud-headless-personas.md.
daemon = ["desktop-full"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

# Desktop-only plugins (gated behind "desktop" feature)
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "sync", "time",
    "process", "io-util", "fs", "net", "signal",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
rusqlite = { version = "0.38", features = ["bundled", "hooks"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "serde-json-impl", "no-serde-warnings"] }
dirs = "6"
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
whoami = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
futures-util = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
hmac = "0.12"
hkdf = "0.12"
hex = "0.4"
open = "5"
url = "2"
urlencoding = "2"
sentry = { version = "0.34", default-features = false, features = [
    "backtrace", "contexts", "panic", "rustls", "reqwest"
] }
sentry-tracing = "0.34"
zeroize = { version = "1", features = ["derive"] }
dotenvy = "0.15"
rsa = "0.9"
rand = "0.8"
regex = "1"
glob = "0.3"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
jsonschema = { version = "0.28", default-features = false }
ammonia = "4"
bytemuck = "1"

# Vector Knowledge Base (Phase 1: sqlite-vec + local embeddings)
sqlite-vec = { version = "0.1", optional = true }
fastembed = { version = "4", optional = true }
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"], optional = true }

# P2P / Identity (Phase 1: Invisible Apps)
ed25519-dalek = { version = "2", features = ["serde", "zeroize", "rand_core"], optional = true }
bs58 = { version = "0.5", optional = true }

# P2P / LAN Discovery & Transport (Phase 2: Invisible Apps)
mdns-sd = { version = "0.11", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.13", optional = true }
rmp-serde = { version = "1.3", optional = true }

libc = "0.2"

# Desktop-only crates (gated behind "desktop" feature)
notify = { version = "7", default-features = false, features = ["macos_kqueue"], optional = true }
arboard = { version = "3", optional = true }
keyring = { version = "3", optional = true }
which = { version = "8.0.1", optional = true }
# Screen capture for validation loops (see engine/ambient_context.rs::capture_validation_screenshot)
xcap = { version = "0.7", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[[bin]]
name = "personas-mcp"
path = "src/mcp_bin.rs"

# Always-on daemon binary (Phase 0 scaffold). Opt-in via the `daemon` feature
# so default builds and CI do not compile it. Boots without a Tauri window,
# acquires the daemon lock file, and in future sessions will spawn the
# headless trigger runtime.
[[bin]]
name = "personas-daemon"
path = "src/daemon_bin.rs"
required-features = ["daemon"]

# Daily release profile: thin LTO is ~2-4x faster link with <2% perf difference.
# Use `cargo tauri build` (default) for daily releases.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 2
strip = true
# Use "unwind" to allow catch_unwind to handle ONNX Runtime DLL panics gracefully.
# The ort crate panics on DLL version mismatches which would crash the entire app with "abort".
panic = "unwind"

[profile.dev]
opt-level = 0

# Compile all dependencies with basic optimizations even in dev.
# Barely slows initial compile (cached after first build), but makes
# crypto, parsing, and ML inference significantly faster at runtime.
[profile.dev.package."*"]
opt-level = 1

# Fast local testing: `cargo build --profile dev-release`
# ~3x faster compile than release, still optimized enough for perf testing
[profile.dev-release]
inherits = "dev"
opt-level = 2
lto = "thin"

# CI profile: faster than release but catches optimization bugs.
# Used by CI for test + clippy runs — avoids full LTO cost.
[profile.ci]
inherits = "release"
codegen-units = 4
strip = false

# Milestone/stable release profile: full LTO for maximum optimization.
# Use via: cargo tauri build --profile stable
[profile.stable]
inherits = "release"
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security_Cryptography",
] }
