[package]
name = "personas-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macros for personas-desktop: #[requires(level)] auth attribute."
license = "MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
